--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ footer {
   color: var(--color-gray-darker);
 }
 
-/* #endregion footer */
+/* RWD */
 @media (max-width: 1295px) {
   .container {
     padding: 80px 12px;
